nullaway_error_BE48B66E-204B-4C27-939F-35DFB503E484.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-websocket/src/main/java/org/springframework/web/socket/sockjs/support/AbstractSockJsService.java:368: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.corsConfiguration.getAllowedOriginPatterns();
		^
    (see http://t.uber.com/nullaway )
